# python-opt-library-benchmarks

./: bench.txt  bench_chassis_odom.txt  bench_eos.txt  jetson_bench_odom.txt  jetson_bench_odom_numpy_numba.txt  jetson_torch_numba.txt  plot.py  pyproject.toml  run.py  utilities.py
.cursor/rules/: lesson-learning.mdc  memory-management.mdc  quality-guidelines.mdc
benchmarks/chassis_odometry/: README.md  __init__.py  chassis_odometry_jax.py  chassis_odometry_numba.py  chassis_odometry_numpy.py  chassis_odometry_pytorch.py  chassis_odometry_taichi.py
